3.1.4+
 * Added do_imgbox_scale to perform upscaling (and downscaling) via
   SDL rather than my procedure.
 * Added stretch_blit() to sdl_allegro
 * add debug logging function
 * Added 80's arcade-styled bitmap font, set fontsize to 16x32 to
   activate
 * moved downscale_bm to sdl_allegro and ensured that it also
   upscales, but it gets the color wrong,  more reason to move
   to SDL2
 * created new MM (mask) parameter in rcfile, need to do OV
 * Fixed long-standing bug where the boxscan background bitmap disappears 
   after playing a game-- needed to load image from gthemedir, not
   picsdir
 * use stretch_blit instead of calling internal stretch procedure
   directly (should help when porting to SDL2)


3.1.4
 * Removed warnings
 * Fixed runtime issues on x86_64 (mostly by adding #include<string.h>

3.1.2
 * Changed do_imgboxes to do_imgbox.
 * do_imgboxes is now a wrapper to do_imgbox that processes all images
 * enabled B_PICBOX for displaying the old style images
 * disabled the old picbox.  It must now be enabled in the rc file, it's
   not enabled by default
 * Added _XY to labels for imgboxes in rc file.  I.E. B_BOXSCAN_XY instead
   of B_BOXSCAN. This fixes a bug,  B_BOXSCAN processed B_BOXSCAN_BM too,
   this is why imgboxes would be disabled if the rc file was in the wrong
   order.  Will no longer be an issue.
 TODO
   - Seems most issues are addressed
   - enable keyboard, find way to only make them display for directory? 
     may be a challenge.  Maybe change the background image depending on
     what emulator is selected, and never have it load actual images?
     ie set prefix to kb_ but have no kb_*pcx images.
   - bugs in setup?  Probably string length issues, always is.
   - Recenter banner, allow larger fonts
   - scrolling for desc box, display company and year in another font
     also blurb source (mobygames)

3.1.1
 * Enabled Screen Shot display
 * BUGS: Name: not working

3.1.0
 * Descbox2 with word-wrap, headline, can be resized
