@@ -1,2 +1,2 @@
-void load_rc(char *filen);
-void hss_index(char* rstr, char *ostr, int idx, char del);
+int load_rc(char *filen);
+int hss_index(char* rstr, char *ostr, int idx, char del);
